--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -5,7 +5,7 @@
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
 # Title of your site
-title = "Academic"
+title = "Emmanuel Ferragne"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
@@ -17,6 +17,8 @@ copyright = ""
 
 # Enable analytics by entering your Google Analytics tracking ID
 googleAnalytics = ""
+
+highlight_languages = ["matlab"]
 
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
@@ -60,3 +62,4 @@ preserveTaxonomyNames = true
   category = "categories"
   publication_type = "publication_types"
   author = "authors"
+  
