--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -16,22 +16,22 @@
 [[main]]
   name = "Posts"
   url = "#posts"
-  weight = 3
+  weight = 4
 
 [[main]]
   name = "Projects"
   url = "#projects"
-  weight = 4
-
-[[main]]
-  name = "Tutorials"
-  url = "/tutorial/"
   weight = 5
 
 [[main]]
-  name = "Contact"
-  url = "#contact"
+  name = "Students"
+  url = "/tutorial/"
   weight = 6
+
+[[main]]
+  name = "Talks"
+  url = "#talks"
+  weight = 3
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
