--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -30,7 +30,7 @@
 
 [[main]]
   name = "Talks"
-  url = "#talks"
+  url = "#talks_featured"
   weight = 3
 
 # Link to a PDF of your resume/CV from the menu.
