--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -30,7 +30,8 @@
 
 [[main]]
   name = "Talks"
-  url = "#talks_featured"
+  #url = "#talks_featured"
+  url = "talks"
   weight = 3
 
 # Link to a PDF of your resume/CV from the menu.
